--- a/project1_react/package.json
+++ b/project1_react/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
